--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+appdirs==1.4.4
 asgiref==3.3.1
 astroid==2.4.2
 autopep8==1.5.4
 colorama==0.4.4
+distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.1.6
 django-heroku==0.3.1
 django-widget-tweaks==1.4.8
+filelock==3.0.12
+gunicorn==20.0.4
 isort==5.7.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -20,5 +24,6 @@ pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
+virtualenv==20.4.2
 whitenoise==5.2.0
 wrapt==1.12.1
