--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,16 @@ colorama==0.4.4
 configparser==5.0.1
 crayons==0.4.0
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.6
+django-widget-tweaks==1.4.8
 filelock==3.0.12
 gunicorn==20.0.4
 idna==2.10
 numpy==1.20.0
 opencv-python==4.5.1.48
+Pillow==8.1.0
+psycopg2==2.8.6
 pycodestyle==2.6.0
 pytz==2021.1
 requests==2.25.1
@@ -22,3 +26,4 @@ sqlparse==0.4.1
 urllib3==1.26.3
 virtualenv==20.4.1
 webdriver-manager==3.3.0
+whitenoise==5.2.0
