--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4
 asgiref==3.3.1
+astroid==2.4.2
 autopep8==1.5.4
 certifi==2020.12.5
 chardet==4.0.0
@@ -9,21 +10,31 @@ crayons==0.4.0
 distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.1.6
+django-heroku==0.3.1
 django-widget-tweaks==1.4.8
 filelock==3.0.12
 gunicorn==20.0.4
 idna==2.10
+isort==5.7.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 numpy==1.20.0
 opencv-python==4.5.1.48
 Pillow==8.1.0
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
+pylint==2.6.0
+pylint-django==2.4.2
+pylint-plugin-utils==0.6
 pytz==2021.1
 requests==2.25.1
 selenium==3.141.0
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.26.3
 virtualenv==20.4.1
 webdriver-manager==3.3.0
 whitenoise==5.2.0
+wrapt==1.12.1
