--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "elhegazy"]
-	path = elhegazy
-	url = https://github.com/M7mod-hegazy/elhegazy.git
+[submodule "myfrist"]
+	path = myfrist
+	url = https://github.com/M7mod-hegazy/myfrist.git
